src/objects/EventApi__Registration_Group__c.object
<CustomObject>
    <description>Event &quot;Registration Groups&quot; track groups of participants for either corporate registrations, fundraising teams, or family members.</description>
    <fields>
        <fullName>EventApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to related Account. Required if the Group is defined as a &quot;Corporate Registration Group&quot;.</description>
        <inlineHelpText>** Conditionally Required ** Link to related Account. Required if the Group is defined as a &quot;Corporate Registration Group&quot;.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registration Groups</relationshipLabel>
        <relationshipName>Registration_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Create_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, a new Contact record will be created for all group members that do not match an existing Contact (email used as the contact match identifier). The Contact will be linked automatically to the Account linked to the group. Defaults checked.</description>
        <inlineHelpText>When checked, a new Contact record will be created for all group members that do not match an existing Contact (email used as the contact match identifier). The Contact will be linked automatically to the Account linked to the group. Defaults checked.</inlineHelpText>
        <label>Create Contacts for Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Create_Standing_Sales_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A &quot;Standing&quot; Sales Order is created allowing group members to register for the Event without providing payment. The Primary Contact will be responsible for the total fees accrued during registration of related group members. Defaults unchecked.</description>
        <inlineHelpText>A &quot;Standing&quot; Sales Order is created allowing group members to register for the Event without providing payment. The Primary Contact will be responsible for the total fees accrued during registration of related group members. Defaults unchecked.</inlineHelpText>
        <label>Create Standing Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Optional description for the group to display on registration pages.</description>
        <inlineHelpText>Optional description for the group to display on registration pages.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Registered_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Attendees registered with the group will display on the group registration page. Defaults unchecked.</description>
        <inlineHelpText>When checked, Attendees registered with the group will display on the group registration page. Defaults unchecked.</inlineHelpText>
        <label>Display Registered Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict access to the group on registration pages. Unchecked by default.</description>
        <inlineHelpText>Restrict access to the group on registration pages. Unchecked by default.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to related Event.</description>
        <inlineHelpText>** Required ** Link to related Event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Registration Groups</relationshipLabel>
        <relationshipName>Registration_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Group_Logo_URL__c</fullName>
        <description>Secure (&quot;https://&quot;) url where the group&apos;s logo image file is located.</description>
        <inlineHelpText>Secure (&quot;https://&quot;) url where the group&apos;s logo image file is located.</inlineHelpText>
        <label>Group Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Invitation_Email_Body__c</fullName>
        <description>Email Body for invitation</description>
        <inlineHelpText>Email Body for invitation</inlineHelpText>
        <label>Invitation Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Invoice_Date__c</fullName>
        <description>The date to invoice the registration group&apos;s primary contact and/or company.</description>
        <inlineHelpText>The date to invoice the registration group&apos;s primary contact and/or company.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Limit_Registrations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the group size will restricted to the &quot;Registration Limit&quot;. Defaults unchecked.</description>
        <inlineHelpText>When checked, the group size will restricted to the &quot;Registration Limit&quot;. Defaults unchecked.</inlineHelpText>
        <label>Limit Registrations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A valid Payment Method may be linked to the Registration Group so that the Registration Group is automatically charged for all registration fees for group members the day after the &quot;Sales Closed Date&quot; on the Event.</description>
        <inlineHelpText>A valid Payment Method may be linked to the Registration Group so that the Registration Group is automatically charged for all registration fees for group members the day after the &quot;Sales Closed Date&quot; on the Event.</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipLabel>Registration Groups</relationshipLabel>
        <relationshipName>Registration_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Payment_Status__c</fullName>
        <description>** System Calculated ** The current status of payment for the Registration Group.</description>
        <inlineHelpText>** System Calculated ** The current status of payment for the Registration Group.</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Payment Processed</fullName>
                </value>
                <value>
                    <fullName>Payment Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Select the payment terms to use for the registration group&apos;s invoice. Required if posting entity is set to &quot;Invoice&quot;.</description>
        <inlineHelpText>** Conditionally Required ** Select the payment terms to use for the registration group&apos;s invoice. Required if posting entity is set to &quot;Invoice&quot;.</inlineHelpText>
        <label>Payment Terms</label>
        <referenceTo>OrderApi__Payment_Terms__c</referenceTo>
        <relationshipLabel>Registration Groups</relationshipLabel>
        <relationshipName>Registration_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Payment_Type__c</fullName>
        <description>Registration Groups can pay for all group members at once either by Invoice or automatic Payment Method charge.</description>
        <inlineHelpText>Registration Groups can pay for all group members at once either by Invoice or automatic Payment Method charge.</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>Payment Method</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Posting_Entity__c</fullName>
        <description>Select either Invoice or Receipt. Valid and restricted to Registration Groups where &quot;Create Standing Sales Order&quot; is checked.</description>
        <inlineHelpText>Select either Invoice or Receipt. Valid and restricted to Registration Groups where &quot;Create Standing Sales Order&quot; is checked.</inlineHelpText>
        <label>Posting Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Primary Contact. Derived from the related Account&apos;s &quot;Primary Contact&quot;.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Primary Contact. Derived from the related Account&apos;s &quot;Primary Contact&quot;.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registration Groups (Primary Contact) Do Not Display</relationshipLabel>
        <relationshipName>Registration_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Register_Site_Url__c</fullName>
        <description>URL endpoint to be used for email registrants.</description>
        <inlineHelpText>URL endpoint to be used for email registrants.</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Registered_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** System Calculated ** Count of &quot;Registered&quot; Attendees related to the Registration Group.</description>
        <inlineHelpText>** System Calculated ** Count of &quot;Registered&quot; Attendees related to the Registration Group.</inlineHelpText>
        <label>Registered Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Code__c</fullName>
        <description>** System Calculated External ID ** Auto Number &quot;External ID&quot; that allows a group to be &quot;private&quot; and only accessible with a &quot;Registration Code&quot;.</description>
        <displayFormat>{0000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>** System Calculated External ID ** Auto Number &quot;External ID&quot; that allows a group to be &quot;private&quot; and only accessible with a &quot;Registration Code&quot;.</inlineHelpText>
        <label>Registration Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Instructions__c</fullName>
        <description>Custom instructions to display on the Group Registration page.</description>
        <inlineHelpText>Custom instructions to display on the Group Registration page.</inlineHelpText>
        <label>Registration Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Limit__c</fullName>
        <description>The maximum number of Attendees allowed to register with the group. Required and restricted to Registration Groups where &quot;Limit Registrations&quot; is checked.</description>
        <inlineHelpText>The maximum number of Attendees allowed to register with the group. Required and restricted to Registration Groups where &quot;Limit Registrations&quot; is checked.</inlineHelpText>
        <label>Registration Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Page_Header__c</fullName>
        <description>The header content to insert into the group&apos;s registration page.</description>
        <inlineHelpText>The header content to insert into the group&apos;s registration page.</inlineHelpText>
        <label>Registration Page Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTE__Invited_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains Invited Attendee reference for RSVP Event</description>
        <label>Invited Attendee</label>
        <referenceTo>EventApi__Attendee__c</referenceTo>
        <relationshipLabel>Registration Groups</relationshipLabel>
        <relationshipName>Registration_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Registration Group</label>
    <listViews>
        <fullName>EventApi__All</fullName>
        <columns>NAME</columns>
        <columns>EventApi__Event__c</columns>
        <columns>EventApi__Account__c</columns>
        <columns>EventApi__Primary_Contact__c</columns>
        <columns>EventApi__Registered_Attendees__c</columns>
        <columns>EventApi__Create_Standing_Sales_Order__c</columns>
        <columns>EventApi__Payment_Type__c</columns>
        <columns>EventApi__Payment_Status__c</columns>
        <columns>EventApi__Posting_Entity__c</columns>
        <columns>EventApi__Payment_Method__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>